--- a/app/src/main/res/layout/item_contact_add.xml
+++ b/app/src/main/res/layout/item_contact_add.xml
@@ -23,6 +23,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginStart="12dp"
         android:layout_weight="1"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
@@ -35,7 +36,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/txtStatusContact"
+            android:id="@+id/txtPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -43,6 +44,7 @@
             android:maxLines="1"
             android:textColor="#757575"
             android:textSize="14sp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -51,28 +53,13 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/btnCall"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginEnd="8dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="4dp"
-            android:src="@android:drawable/ic_menu_call"
-            app:tint="#0068FF" />
-
-        <ImageView
-            android:id="@+id/btnMessage"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="4dp"
-            android:src="@android:drawable/ic_dialog_email"
-            app:tint="#0068FF" />
+        <ImageButton
+            android:id="@+id/btnAddContact"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="end"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/plus" />
     </LinearLayout>
 
 </LinearLayout>
