--- a/app/src/main/res/layout/activity_select_country.xml
+++ b/app/src/main/res/layout/activity_select_country.xml
@@ -34,7 +34,7 @@
         android:id="@+id/et_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/search_holder"
+        android:background="#FFFFFF"
         android:drawableStart="@drawable/search"
         android:drawablePadding="8dp"
         android:hint="@string/search"
