--- a/app/src/main/res/layout/activity_incoming_call.xml
+++ b/app/src/main/res/layout/activity_incoming_call.xml
@@ -1,56 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="#F5F5F5">
-
-    <ImageView
-        android:id="@+id/avatar"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_avatar_placeholder"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/circle_bg"
-        android:scaleType="centerCrop" />
+    android:background="@android:color/white">
 
     <TextView
         android:id="@+id/tvCallerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tên người gọi"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginBottom="8dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:textColor="#000"/>
 
-    <TextView
-        android:id="@+id/tvStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Đang gọi đến..."
-        android:textSize="16sp"
-        android:textColor="#888"
-        android:layout_marginBottom="32dp" />
+    <ImageView
+        android:id="@+id/imgAvatar"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/ic_avatar_placeholder"
+        android:layout_below="@id/tvCallerName"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/circle_bg"
+        android:scaleType="centerCrop"/>
 
     <LinearLayout
+        android:id="@+id/llButtons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="48dp"
         android:orientation="horizontal">
-        <Button
-            android:id="@+id/btnAccept"
-            android:layout_width="120dp"
-            android:layout_height="48dp"
-            android:text="Chấp nhận"
-            android:textColor="#fff"
-            android:backgroundTint="#43A047"
-            android:layout_marginEnd="16dp" />
-        <Button
-            android:id="@+id/btnDecline"
-            android:layout_width="120dp"
-            android:layout_height="48dp"
-            android:text="Từ chối"
-            android:textColor="#fff"
-            android:backgroundTint="#E53935" />
+
+        <ImageButton
+            android:id="@+id/acceptButton"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:background="@drawable/btn_green_background"
+            android:src="@drawable/ic_call"
+            android:scaleType="centerInside"
+            android:contentDescription="Nhấc máy"
+            android:layout_marginEnd="32dp"/>
+
+        <ImageButton
+            android:id="@+id/declineButton"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:background="@drawable/btn_red_background"
+            android:src="@drawable/ic_call_end"
+            android:scaleType="centerInside"
+            android:contentDescription="Từ chối"/>
     </LinearLayout>
-</LinearLayout> 
+</RelativeLayout> 
