--- a/app/src/main/res/layout/activity_outgoing_call.xml
+++ b/app/src/main/res/layout/activity_outgoing_call.xml
@@ -9,7 +9,7 @@
         android:id="@+id/callStatusText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Đang kết nối..."
+        android:text="Đang gọi..."
         android:textSize="18sp"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,18 +40,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userAvatar" />
 
-    <TextView
-        android:id="@+id/callTimerText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="00:00"
-        android:textSize="20sp"
-        android:textColor="@android:color/holo_green_dark"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/userName" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,15 +47,6 @@
         android:gravity="center"
         android:layout_marginBottom="48dp"
         app:layout_constraintBottom_toBottomOf="parent">
-
-        <ImageButton
-            android:id="@+id/toggleMicButton"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/circle_background"
-            android:src="@drawable/ic_mic_on"
-            android:contentDescription="Toggle microphone" />
 
         <ImageButton
             android:id="@+id/endCallButton"
