--- a/app/src/main/res/layout/activity_video_call.xml
+++ b/app/src/main/res/layout/activity_video_call.xml
@@ -1,22 +1,69 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-    <FrameLayout
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/black">
+
+    <org.webrtc.SurfaceViewRenderer
+        android:id="@+id/remote_video_view_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <org.webrtc.SurfaceViewRenderer
         android:id="@+id/local_video_view_container"
         android:layout_width="120dp"
         android:layout_height="160dp"
-        android:layout_gravity="top|end"
-        android:layout_margin="16dp"/>
-    <FrameLayout
-        android:id="@+id/remote_video_view_container"
+        android:layout_margin="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/controlsLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    <Button
-        android:id="@+id/btnEndCall"
-        android:layout_width="120dp"
-        android:layout_height="48dp"
-        android:text="Kết thúc"
-        android:textColor="#fff"
-        android:backgroundTint="#E53935"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="32dp" />
-</FrameLayout> 
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageButton
+            android:id="@+id/btn_switch_camera"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_margin="12dp"
+            android:background="@drawable/circle_background"
+            android:backgroundTint="#4CAF50"
+            android:tint="@android:color/white"
+            android:src="@drawable/ic_switch_camera"
+            android:contentDescription="Switch camera" />
+
+        <ImageButton
+            android:id="@+id/btn_mute"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_margin="12dp"
+            android:background="@drawable/circle_background"
+            android:backgroundTint="#4CAF50"
+            android:tint="@android:color/white"
+            android:src="@drawable/ic_mic_on"
+            android:contentDescription="Toggle microphone" />
+
+        <ImageButton
+            android:id="@+id/btnEndCall"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_margin="12dp"
+            android:background="@drawable/circle_background"
+            android:backgroundTint="#FF0000"
+            android:tint="@android:color/white"
+            android:src="@drawable/ic_call_end"
+            android:contentDescription="End call" />
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout> 
